objects/sbaa__TrackedField__c.object
<CustomObject>
    <description>Field tracked by the parent approval rule.</description>
    <fields>
        <fullName>sbaa__ApprovalRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval Rule that will generate the Tracked Value for this Tracked Field</description>
        <inlineHelpText>Approval Rule that will generate the Tracked Value for this Tracked Field</inlineHelpText>
        <label>Approval Rule</label>
        <referenceTo>sbaa__ApprovalRule__c</referenceTo>
        <relationshipLabel>Tracked Fields</relationshipLabel>
        <relationshipName>TrackedFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__RecordField__c</fullName>
        <description>Select the type of record to associate for created tracked fields. If the object is not Opportunity, be sure to create a new lookup field on the Tracked Field object.</description>
        <inlineHelpText>Field (on Tracked Value object) that represents a Lookup to its parent object</inlineHelpText>
        <label>Record Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__TrackedField__c</fullName>
        <description>A Field (on a Tracked Object) that is being tracked</description>
        <inlineHelpText>A Field (on a Tracked Object) that is being tracked</inlineHelpText>
        <label>Tracked Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__TrackedObject__c</fullName>
        <description>Object on which Tracked Field exists</description>
        <inlineHelpText>Object on which Tracked Field exists</inlineHelpText>
        <label>Tracked Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__TrackingType__c</fullName>
        <description>Choose whether all values are tracked or only changes from the previous tracked value.</description>
        <inlineHelpText>Choose whether all values are tracked or only changes from the previous tracked value.</inlineHelpText>
        <label>Tracking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Values</fullName>
                </value>
                <value>
                    <fullName>Any Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tracked Field</label>
    <nameField>
        <displayFormat>TF-{00000}</displayFormat>
        <label>Tracked Field #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracked Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>